--- a/style.css
+++ b/style.css
@@ -1,11 +1,78 @@
-.header, .top, .footer{
+body{
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    margin: 0;
+}
+
+.hero, .footer{
     background-color: #1f2937;
+}
+
+.header{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 16px 0;
+    margin-bottom: 100px;
+}
+
+.top{
+    display: flex;
+    justify-content: space-between;
+}
+
+.top-left, .top-right{
+    width: 500px;
+}
+
+.top-right{
+    display: flex;
+    background-color: grey;
+    justify-content: center;
+    align-items: center;
+}
+
+.top-content{
+    margin-bottom: 8px;
+}
+
+.button-top{
+    border: none;
+}
+
+.img-holder{
+    border: 4px solid #3882f6;
+    border-radius: 15px;
+    width: 150px;
+    height: 150px;
+}
+
+p{
+    margin: 0;
+    padding: 0;
+}
+
+ul{
+    display: flex;
+    list-style: none;
+    gap: 24px;
+    margin: 0;
+    padding: 0;
 }
 
 h1{
     font-size: 48px;
     font-weight: extra-bold;
     color: #f9faf8;
+    margin: 0;
+    padding: 0;
+}
+
+h2{
+    margin: 0;
+    padding: 0;
 }
 
 .header-links, .top-text{
@@ -21,6 +88,10 @@ h1{
 
 button, .call{
     background-color: #3882f6;
+    color: white;
+    border-radius: 5px;
+    font-weight: bold;
+    padding: 8px 16px;
 }
 
 .info-header{
