--- a/style.css
+++ b/style.css
@@ -42,11 +42,27 @@ body{
     border: none;
 }
 
+.middle{
+    text-align: center;
+}
+
 .img-holder{
     border: 4px solid #3882f6;
     border-radius: 15px;
     width: 150px;
     height: 150px;
+    flex: 0 0 auto;
+}
+
+.middle-content{
+    display: flex;
+    justify-content: center;
+    gap: 50px;
+}
+
+.middle-container{
+    width: 150px;
+    flex-wrap: wrap;
 }
 
 p{
